# Stack-overflow-survey-2024-salary-prediction

./: .gitattributes  .gitignore  .vercelignore  Makefile  README.md  __init__.py  dataset.py  features.py  package-lock.json  package.json  plots.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: main.yaml
app/: main.py
backend/: requirements.txt
backend/app/: feature_names.txt  main.py  model.py  prep.py  schemas.py
data/processed/: cat_domains.json  preprocessor.pkl
docs/: mkdocs.yml
docs/docs/: index.md
frontend/: .vercelignore  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vercel.json
frontend/src/lib/: api.js
frontend/src/lib/components/: Chart.svelte  Footer.svelte  Header.svelte  PredictorForm.svelte  StatCard.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
modeling/: predict.py  train.py
models/: model.pkl  preprocessor.pkl  preprocessor1.pkl
notebooks/: 1_data_cleaning.ipynb  2_EDA.ipynb  3_model_train.ipynb  model.py  preprocessing.py
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/921358557082687815/: meta.yaml
notebooks/mlruns/921358557082687815/001e3fd221b94c02a945122955c0c9ae/: meta.yaml
notebooks/mlruns/921358557082687815/0275b339f16a4f4a8601abe33168da3d/: meta.yaml
notebooks/mlruns/921358557082687815/040a20e42b5c440193adef56dfa34f8b/: meta.yaml
notebooks/mlruns/921358557082687815/0746910c29fd4b82a2aa44b8119083b3/: meta.yaml
notebooks/mlruns/921358557082687815/0a1707c458cf44ab9ed554ade878f289/: meta.yaml
(+127 files in other folders)
